---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: ???? 
  Features:
    - Added automatica compatibility! It'll choose a few defaults based on the detected mod and written compatibility
  Minor Features:
    - Added compatibility for Ultracube
    - Added compatibility for Science Packs Galore (as well as Forked)
    - Added compatibility for MoreSciencePacks-for1_1
    - Added compatibility for my other mod better-chat (the compatibility message prints using the interface)
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2024-05-28
  Bugfixes:
    - Should no longer accidentally wipe the blocked list when an item that has blocked items from calculating finishes calculating
    - Actually send nil to unregister the nth tick. I didn't realize it was required and it worked for me (on linux).
    - An invalid hand-mining should no longer cause a crash
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2024-05-28
  Features:
    - Natural resources like trees and rocks are now accounted for in the chain. This also partially overwrote the mining resources, so now they might not appear if they don't have an autoplace.
  Bugfixes:
    - Should no longer crash when it attempts to unhighlight the tier table after it got rebuilt.
    - Removed possible crash with tier_array being nil
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2024-05-26
  Features:
    - Mining resources are now accounted for in the chain. This means uranium ore is no longer T0
    - Offshore pumps are now accounted for in the chain
  Changes:
    - Refactored almost the entire tier calculation. Should now have less of a chance of dependency bugs and be mostly easier to read.
  Bugfixes: