@@ -13,8 +13,10 @@ tiergen-item-calculation=A comma separated list of item id's that'll be calculat
 tiergen-base-items=A comma separated list of item id's that'll have their tiers set to 0. Default is raw-fish as you can obtain it from launching space-science into space.
 tiergen-ignored-recipes=A comma separated list of recipe id's that'll be ignored when calculating item tiers. Meant to prevent early or cheap recipes from lowering an item's tier.
 
+[controls]
+tiergen-menu=Toggle tier menu
 [shortcut-name]
-tiergen-menu=Show Item Tiers
+tiergen-menu=Toggle tier menu
 
 [tiergen]
 menu=Item Tiers
