@@ -2,7 +2,8 @@
 Version: 0.2.5
 Date: ???? 
   Features:
-    - Added automatica compatibility! It'll choose a few defaults based on the detected mod and written compatibility
+    - Added automatic compatibility! It'll choose a few defaults based on the detected mod and written compatibility
+    - Finally added a keybind for opening the menu
   Minor Features:
     - Added compatibility for Ultracube
     - Added compatibility for Science Packs Galore (as well as Forked)
